Fix mobile figcaption stacking on anchor-wrapped images
- Add display:block to .image-right/.image-left on mobile so <a> tags
  behave the same as <figure> tags, giving figcaptions full width

--- a/css/style.css
+++ b/css/style.css
@@ -980,6 +980,7 @@ a {
         width: 100%;
         max-width: 100%;
         margin: 2rem 0 0.5rem 0;
+        display: block;
     }
 
     /* First image right after the title needs less top margin */
